# PyroSense-Simulator

./: .env.example  .gitignore  CHANGELOG.md  README.md  WINRY-BITACORA.md  mkdocs.yml  pyproject.toml
config/: params.example.yaml  publisher.example.yaml
data/: README.md
docs/: CONTRIBUTING.md  architecture.md  best-practices-review.md  data-contract.md  index.md  payload-schema-v1.json  reference.md  testing-strategy.md
docs/adr/: ADR-0001-dos-programas.md  ADR-0001-two-programs.md  ADR-0002-contract-first.md  ADR-0002-contrato-primero.md  ADR-0003-pydantic-at-the-boundary.md  ADR-0003-pydantic-frontera.md  ADR-0004-git-flow.md  ADR-0005-device-health-not-alerts.md  ADR-0005-sensor-no-alerta.md  ADR-0006-tooling.md  ADR-0007-deterministic-plan.md  ADR-0007-plan-determinista.md  ADR-0008-gateways-as-metadata.md  ADR-0008-gateways-metadato.md  ADR-0009-noise-lives-in-the-sensor.md  ADR-0009-ruido-en-el-sensor.md  ADR-0010-stdout-canal-de-datos.md  ADR-0010-stdout-data-channel.md  ADR-0011-fuego-parametrico.md  ADR-0011-parametric-fire.md  ADR-0012-fallos-como-decorador.md  ADR-0012-faults-as-decorator.md  ADR-0013-qos1-dedupe-en-nube.md  ADR-0013-qos1-dedupe-in-the-cloud.md  index.md
scenarios/: baseline.yaml  carga.yaml  dry_season.yaml  fallos.yaml  faults.yaml  january_2024_replay.yaml  load_test.yaml  replay_enero_2024.yaml  temporada_seca.yaml
src/pyrosense_sim/: __init__.py
src/pyrosense_sim/contracts/: __init__.py  export_schema.py  telemetry.py
src/pyrosense_sim/fleet/: __init__.py  cli.py  config.py  environment.py  faults.py  fire_event.py  node.py  orchestrator.py  scheduler.py
src/pyrosense_sim/planner/: __init__.py  cli.py  gateways.py  geo.py  params.py  placement.py  preview.py  site_plan.py  terrain.py  zones.py
src/pyrosense_sim/publishers/: __init__.py  base.py  file.py  mqtt.py  ndjson.py  stdout.py
tests/: __init__.py  test_smoke.py
tests/contracts/: __init__.py  test_export_schema.py  test_telemetry.py
tests/fleet/: __init__.py  site_fixture.py  test_cli.py  test_config.py  test_environment.py  test_faults.py  test_fire_event.py  test_load.py  test_node.py  test_orchestrator.py  test_scheduler.py
tests/planner/: __init__.py  synthetic_dem.py  test_cli.py  test_gateways.py  test_params.py  test_placement.py  test_site_plan.py  test_terrain.py  test_zones.py
tests/publishers/: __init__.py  test_base.py  test_file.py  test_mqtt.py  test_stdout.py
